--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,6 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "unused-imports/no-unused-imports": "error",
     "import/order": [
       "error",
       {
@@ -32,12 +31,13 @@
         }
       }
     ],
+    "unused-imports/no-unused-imports": "error",
+    "redos/no-vulnerable": "error", //正規表現での脆弱性を検出した場合にエラー
     "@typescript-eslint/ban-ts-comment": "off", //TypeScriptの@ts-ignore、@ts-nocheck、@ts-checkの使用を許可
     "@typescript-eslint/no-floating-promises": "error", //Promiseをawaitせずにそのまま使うのをエラーにする
-    "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }], //型はimport typeで表示
     "import/no-duplicates": "error", //重複するimportをエラーにする
     "react/jsx-sort-props": "error", //JSXコンポーネントのPropsの順番も自動でソート
     "@next/next/no-img-element": "off", // Next.jsで<img>要素を使用しても警告を出さないようにする
-    "redos/no-vulnerable": "error" //正規表現での脆弱性を検出した場合にエラー
+    "@typescript-eslint/consistent-type-imports": ["error", { "prefer": "type-imports" }] //型はimport typeで表示
   }
 }
